Apply Article CRUD
